--- a/views/index.html
+++ b/views/index.html
@@ -33,16 +33,19 @@
 
     <!-- Login Form -->
     <form>
-      <input type="text" id="login" class="fadeIn second" name="login" placeholder="email">
-      <input type="password" id="password" class="fadeIn third" name="login" placeholder="password">
-      <input type="submit" class="fadeIn fourth" value="Log In">
+      <input type="text" id="login" class="fadeIn second" name="login" placeholder="email" required>
+      <input type="password" id="password" class="fadeIn third" name="login" placeholder="password" required>
+      <input id="submit" type="submit" class="fadeIn fourth" value="Log In">
     </form>
-
+  
+    
 
 
   </div>
 </div>
-    
+      Try this, 
+      email: somerandommail@email.com
+      password: somepassword') -- 
     </div>
 
     <script src="https://button.glitch.me/button.js"></script>
@@ -53,3 +56,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
