🏇🛰 Checkpoint ./public/client.js:10535191/888 ./views/index.html:10535191/19 ./public/style.css:10535191/708 ./server.js:10535191/643

--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
 
     <!-- Login Form -->
     <form>
-      <input type="text" id="login" class="fadeIn second" name="login" placeholder="email" required>
+      <input type="email" id="email" class="fadeIn second" name="login" placeholder="email" required>
       <input type="password" id="password" class="fadeIn third" name="login" placeholder="password" required>
       <input id="submit" type="submit" class="fadeIn fourth" value="Log In">
     </form>
