🎷🏣 Checkpoint ./server.js:10535191/973 ./public/client.js:10535191/1576 ./views/index.html:10535191/957

--- a/views/index.html
+++ b/views/index.html
@@ -35,6 +35,12 @@
     <form>
       <input type="email" id="email" class="fadeIn second" name="login" placeholder="email" required>
       <input type="password" id="password" class="fadeIn third" name="login" placeholder="password" required>
+      <p style="
+          color: red;
+          visibility: hidden;
+      "  id="helper-text">
+         incorrect username or password
+      </p>
       <input id="submit" type="submit" class="fadeIn fourth" value="Log In">
     </form>
   
