--- a/views/index.html
+++ b/views/index.html
@@ -49,9 +49,17 @@
 
   </div>
 </div>
-      Try this, 
-      email: somerandommail@email.com
-      password: somepassword') -- 
+<div class="jumbotron">
+  <h1 class="display-4">SQL Injection Example</h1>
+  <p class="lead">Use following credentials: .</p>
+  <p class="text-monospace">Email: somerandomemail.com" 1=1 --</p>
+  <p class="text-monospace">Password: somepassword</p>
+  <hr class="my-4">
+  <p class="lead">Resulting query will be as follows: </p>
+
+
+<img src="https://cdn.glitch.com/a2fc744e-afd5-4822-82f8-c8df2af166aa%2Fcarbon.png?v=1587733186126" class="img-fluid" alt="Responsive image">
+</div>
     </div>
 
     <script src="https://button.glitch.me/button.js"></script>
