--- a/views/index.html
+++ b/views/index.html
@@ -37,8 +37,8 @@
       <input type="password" id="password" class="fadeIn third" name="login" placeholder="password" required>
       <p style="
           color: red;
-          visibility: hidden;
-      "  id="helper-text">
+          
+      "  hidden={true id="helper-text">
          incorrect username or password
       </p>
       <input id="submit" type="submit" class="fadeIn fourth" value="Log In">
@@ -56,9 +56,24 @@
   <p class="text-monospace">Password: somepassword</p>
   <hr class="my-4">
   <p class="lead">Resulting query will be as follows: </p>
+  <img src="https://cdn.glitch.com/a2fc744e-afd5-4822-82f8-c8df2af166aa%2Fcarbon.png?v=1587733186126" class="img-fluid" alt="Responsive image">
+  <hr class="my-4">
 
+  <p class="font-weight-bold">Here:</p>
+  <ul>
+    
+    <li>
+        somerandomemail.com ends with a double quote which completes the string quote
+    </li>
+    <li>
+        OR 1 = 1 is a condition that will always be true and
+    </li>
+    <li>
+        -- " AND … is a SQL comment that eliminates the password part.
+    </li>
+  </ul>
+  
 
-<img src="https://cdn.glitch.com/a2fc744e-afd5-4822-82f8-c8df2af166aa%2Fcarbon.png?v=1587733186126" class="img-fluid" alt="Responsive image">
 </div>
     </div>
 
