--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
       <p style="
           color: red;
           
-      "  hidden={true id="helper-text">
+      "  hidden="true" id="helper-text">
          incorrect username or password
       </p>
       <input id="submit" type="submit" class="fadeIn fourth" value="Log In">
