🗺🐛 Checkpoint ./public/home.js:10535191/172 ./public/client.js:10535191/9051 ./server.js:10535191/9057 ./views/index.html:10535191/3

--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
 <div class="jumbotron">
   <h1 class="display-4">SQL Injection Example</h1>
   <p class="lead">Use following credentials: .</p>
-  <p class="text-monospace">Email: somerandomemail.com" 1=1 --</p>
+  <p class="text-monospace">Email: somerandomemail.com" OR 1=1 --</p>
   <p class="text-monospace">Password: somepassword</p>
   <hr class="my-4">
   <p class="lead">Resulting query will be as follows: </p>
